--- a/app/views/foreign_languages/_tongue.html.erb
+++ b/app/views/foreign_languages/_tongue.html.erb
@@ -1,1 +1,1 @@
-<h5><%= image_tag "flags/#{tongue.flag}", class: "mr-2" %><%= link_to  tongue.tongue, foreignlanguage_path(tongue), class: "card-link" %></h5>
+<p><%= image_tag "flags/#{tongue.flag}", class: "mr-2" %><%= link_to  tongue.tongue, foreignlanguage_path(tongue), class: "card-link" %></p>
