--- a/app/views/pages/service.html.erb
+++ b/app/views/pages/service.html.erb
@@ -1,20 +1,12 @@
 <% provide(:title, "Service") %>
 <%= render "shared/banner" %>
-<div class="container">
-    <h4>Church Service Times</h4>
-    <ul class="list-group">
-        <li class="list-group-item justify-content-between">
-            Sunday Morning Preaching Service  
-            <span class="badge badge-default badge-pill">10:30 AM</span>
-        </li>
-        <li class="list-group-item justify-content-between">
-            Sunday Evening Preaching Service
-            <span class="badge badge-default badge-pill">6:30 PM</span>
-        </li>
-        <li class="list-group-item justify-content-between">
-            Wednesday Evening Bible Study
-            <span class="badge badge-default badge-pill">7:00 PM</span>
-        </li>
-    </ul>
-    <p>Children and infants of all ages are welcome in the services.</p>
+<div class="container ">
+  <h4>Church Service Times</h4>
+  <p class="service-heading">Sunday Morning Preaching Service</p>
+  <p>10:30 AM</p>
+  <p class="service-heading">Sunday Evening Preaching Service</p>
+  <p>6:30 PM</p>
+  <p class="service-heading">Wednesday Evening Bible Study</p>
+  <p>7:00 PM</p>
+  <p><b>Children and infants of all ages are welcome in the services.</b></p>
 </div>
