--- a/app/views/pages/soulwinning.html.erb
+++ b/app/views/pages/soulwinning.html.erb
@@ -14,15 +14,15 @@
       <div class="soulwinning-table">
         <strong class="h5">Official Soul-Winning Times</strong>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.wednesday? %>">
-          <p class="soulwinning-date">Wednesday -Pastor Anderson</p>
+          <p class="soulwinning-date">Wednesday (Pastor Anderson)</p>
           <p class="soulwinning-time">5:15 PM</p>
         </div>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.saturday? %>">
-          <p class="soulwinning-date">Saturday -Domonique Davis</p>
+          <p class="soulwinning-date">Saturday (Domonique Davis)</p>
           <p class="soulwinning-time">10:30 AM</p>
         </div>
         <div class="soulwinning-body <%= "active" if Time.zone.now.sunday? %>">
-          <p class="soulwinning-date">Sunday -Scott Brooke</p>
+          <p class="soulwinning-date">Sunday (Scott Brooke)</p>
           <p class="soulwinning-time">1:30 AM</p>
         </div>
       </div>
@@ -32,23 +32,23 @@
       <div class="soulwinning-table">
         <strong class="h5">Regional Soul-Winning Groups</strong>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.monday? %>">
-          <p class="soulwinning-date">Monday -Tyler Baker</p>
+          <p class="soulwinning-date">Monday (Tyler Baker)</p>
           <p class="soulwinning-time">6:30 PM Tempe</p>
         </div>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.tuesday? %>">
-          <p class="soulwinning-date">Tuesday -Jonathan Shelley</p>
+          <p class="soulwinning-date">Tuesday (Jonathan Shelley)</p>
           <p class="soulwinning-time">6:00 PM Tempe</p>
         </div>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.saturday? %>">
-          <p class="soulwinning-date">Saturday -John & Jesse McPhaill</p>
+          <p class="soulwinning-date">Saturday (John & Jesse McPhaill)</p>
           <p class="soulwinning-time">4:45 PM Phoenix</p>
         </div>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.sunday? %>">
-          <p class="soulwinning-date">Sunday -Shawn Fairchild</p>
+          <p class="soulwinning-date">Sunday (Shawn Fairchild)</p>
           <p class="soulwinning-time">2:30 PM Gilbert</p>
         </div>
         <div class="soulwinning-body <%= "active" if Time.zone.now.sunday? %>">
-          <p class="soulwinning-date">Sunday -Mike Matteson</p>
+          <p class="soulwinning-date">Sunday (Mike Matteson)</p>
           <p class="soulwinning-time">2:30 PM Phoenix</p>
         </div>
       </div>
@@ -58,15 +58,15 @@
       <div class="soulwinning-table">
         <strong class="h5">North Phoenix Soul-Winning</strong>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.monday? %>">
-          <p class="soulwinning-date">Monday -Charlie Jeffrey</p>
+          <p class="soulwinning-date">Monday (Charlie Jeffrey)</p>
           <p class="soulwinning-time">6:00 PM</p>
         </div>
         <div class="soulwinning-body mb-2 <%= "active" if Time.zone.now.thursday? %>">
-          <p class="soulwinning-date">Thursday -Jonathan Shelley</p>
+          <p class="soulwinning-date">Thursday (Jonathan Shelley)</p>
           <p class="soulwinning-time">5:15 PM</p>
         </div>
         <div class="soulwinning-body <%= "active" if Time.zone.now.sunday? %>">
-          <p class="soulwinning-date">Sunday -Rick Martinez</p>
+          <p class="soulwinning-date">Sunday (Rick Martinez)</p>
           <p class="soulwinning-time">2:15 PM</p>
         </div>
       </div>
