--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -148,7 +148,6 @@ a:hover {
   color: #994800;
   font-size: 10px;
   line-height: 10px;
-  height: 100%;
   text-decoration: none;
   text-align: center;
   background: linear-gradient(#fff9c1, #fed81c);
@@ -390,4 +389,25 @@ li {
   font-weight: 800;
   line-height: 1;
   margin: 0;
+}
+
+/*--------------------
+FOREIGN LANGUAGES LIST
+----------------------*/
+.columns {
+  column-gap: 20px;
+  column-count: 5;
+}
+.columns ul {
+  margin: 0;
+  padding: 0;
+}
+
+/*---------------
+CHURCH SERVICE TIMES
+-----------------*/
+.service-heading {
+  font-weight: bold;
+  margin: 0;
+  
 }
