--- a/app/views/preaching/_sermon.html.erb
+++ b/app/views/preaching/_sermon.html.erb
@@ -1,6 +1,6 @@
-<% if sermon.datetime.mon != next_month(sermon.datetime) %> 
+<% if next_month(sermon) %> 
 <tr>
-  <td colspan="10"> <h5 class="mb-0"><%= sermon.datetime.strftime(" %B %Y") %></h5></td>
+  <td colspan="4"> <h5 class="mb-0"><%= sermon.datetime.strftime(" %B %Y") %></h5></td>
 </tr>
 <% end %>
 <tr>
@@ -12,12 +12,12 @@
       <%= link_to file_sermon_path(sermon), target: "_self" do %>
         <%= image_tag "icons/mp3_16x16.gif"%>
       <% end %>
-      <% if !sermon.ytube_id.nil? %>
+      <% if !sermon.ytube_id.blank? %>
         <%= link_to "https://www.youtube.com/watch?v=#{sermon.ytube_id}" do %>
           <%= image_tag "icons/ytube_16x16.gif"%>
         <% end %>
       <% end %>
-      <% if !sermon.scloud.nil? %>
+      <% if !sermon.scloud.blank? %>
         <%= link_to "#{sermon.scloud}" do %>
           <%= image_tag "icons/soundcloud_16x16.gif"%>
         <% end %>
