--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -40,17 +40,9 @@
       <b>Baptist</b>,
       <b>Church</b>.</p>
       <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
-      <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into over 115 languages!</p>
+      <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into <%= link_to "over 115 languages!", foreignlanguages_path %></p>
       <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Check out Pastor Anderson's new documentary "Burn That Way After All:"</p>
-      <div class="video-container mb-4">
-        <iframe id="" type="text/html"
-            width="480" height="322"
-            src="https://www.youtube.com/embed/fSqU7qqu6eM?enablejsapi=1"
-            frameborder="0"
-            style="border: solid 4px #0275d8"
-            allowfullscreen>
-        </iframe>
-      </div>
+      <%= ytube_embed("fSqU7qqu6eM", 580, 322) %>
       <blockquote class="verse">
         <p class="mb-0">“Holding fast the faithful word as he hath been taught, that he may be able by sound doctrine both to exhort and to convince the gainsayers.”</p>
         <small>Titus 1:9 KJV</small>
