--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,5 +1,5 @@
-<div class="card mt-2" id="event_<%= event.id %>">
-  <div class="card-block">
+<div class="" id="event_<%= event.id %>">
+  <div class="">
     <h4 class="card-title"><%= event.title %></h4>
     <h6 class="card-subtitle mb-2 text-muted"><%= event.date.strftime("%A %B %d") %></h6>
     <p><%= event.location %></p>
