--- a/app/views/pages/privacyandterms.html.erb
+++ b/app/views/pages/privacyandterms.html.erb
@@ -1,66 +1,63 @@
 <% provide(:title, "Privacy Policy") %>
 <%= render "shared/banner" %>
-<div class="container">
-  <div class="d-flex flex-nowrap">
-    <%= render "shared/side-bar" %>
-    <div class="col-9">
-      <h1>Make a donation to Faithful Word Baptist Church!</h1>
-        <a class="btn btn-primary btn-lg text-center" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
-        <hr>
-        
-        <ul class="nav nav-tabs" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#pp" role="tab">Privacy Policy</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#tac" role="tab">Terms and Conditions</a>
-        </li>
-        </ul>
-        <div class="tab-content">
-        <div class="tab-pane fade show  active" id="pp" role="tabpanel">
-          <p class="mt-3">
-          We are committed to protecting your privacy. Any information given to us will be used for the sole and express purpose as originally requested. We do not sell our customer information to anyone. Our giving systems are continually being improved and upgraded to use the best, secure, encrypted technology to process your transactions safely and securely.
-          </p>
-          <p>
-          We will not share or use your mobile number for any other purpose. We will only use information you provide to transmit your text message.
-          </p>
-          <p>
-          We reserve the right at all times to disclose any information as necessary to satisfy any law, regulation or governmental request, to avoid liability, or to protect our rights or property. When you complete forms online or otherwise provide us information in connection with the Service, you agree to provide accurate, complete and true information. You agree not to use a false or misleading name or a name that you are not authorized to use. If we, in our sole discretion, believe that any such information is untrue, inaccurate or incomplete, we may refuse you access to the Service and pursue any appropriate legal remedies.
-          </p>
-          <p>
-          This website may contain links to other sites on the internet that are owned and operated by third parties. You acknowledge that we are not responsible for the operation of or content located on or through any of these sites. Use of these sites is completely at your own risk.
-          </p>
-          <p>
-          If you access and use this website outside the United States you are responsible for complying with your local laws and regulations.
-          </p>
-          <p>
-          If you or this organization needs to connect with us, we can be reached at 602-456-1049
-          </p>
-        </div>
-        <div class="tab-pane fade" id="tac" role="tabpanel">
-          <p class="mt-3">
-          Browser Compatability: We support all modern browsers, such as Google Chrome, Safari, Mozilla Firefox, Opera, and Internet Explorer version 9 and higher. Javascript is required for this site to function properly.
-          </p>
-          <p>
-          This website may contain links to other sites on the internet that are owned and operated by third parties. You acknowledge that we are not responsible for the operation of or content located on or through any of these sites. Use of these sites is completely at your own risk.
-          </p>
-          <p>
-          If you access and use this website outside the United States you are responsible for complying with your local laws and regulations.
-          </p>
-          <p>
-          Customer Service: If you need help with your account, login issues, or general help with any of your transactions or use of this website, please contact your organization's administrative offices for assistance. SecureGive works hand in hand with your organization's personnel to help resolve any issues in a timely manner.
-          </p>
-          <p>
-          Refunds: If you made a transaction that needs to be refunded, please contact your organization's administrative offices and they can assist to get your funds returned as quickly as possible.
-          </p>
-          <p>
-          Transactions: Your account will be charged at the time your transaction is completed, and this transaction will take a few days to clear the bank and for the funds to be deducted from your account. If it has been longer than 5 business days and your funds have not been deducted from your account, please contact your organization's administrative offices for further assistance.
-          </p>
-          <p>
-          If you or this organization needs to connect with us, we can be reached at 602-456-1049
-          </p>
-        </div>
-        </div>
+<div class="d-flex flex-nowrap">
+  <%= render "shared/side-bar" %>
+  <div>
+    <h4>Make a donation to Faithful Word Baptist Church!</h4>
+    <a class="sky-btn" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
+    <hr>
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" data-toggle="tab" href="#pp" role="tab">Privacy Policy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="tab" href="#tac" role="tab">Terms and Conditions</a>
+      </li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fade show  active" id="pp" role="tabpanel">
+        <p class="mt-3">
+        We are committed to protecting your privacy. Any information given to us will be used for the sole and express purpose as originally requested. We do not sell our customer information to anyone. Our giving systems are continually being improved and upgraded to use the best, secure, encrypted technology to process your transactions safely and securely.
+        </p>
+        <p>
+        We will not share or use your mobile number for any other purpose. We will only use information you provide to transmit your text message.
+        </p>
+        <p>
+        We reserve the right at all times to disclose any information as necessary to satisfy any law, regulation or governmental request, to avoid liability, or to protect our rights or property. When you complete forms online or otherwise provide us information in connection with the Service, you agree to provide accurate, complete and true information. You agree not to use a false or misleading name or a name that you are not authorized to use. If we, in our sole discretion, believe that any such information is untrue, inaccurate or incomplete, we may refuse you access to the Service and pursue any appropriate legal remedies.
+        </p>
+        <p>
+        This website may contain links to other sites on the internet that are owned and operated by third parties. You acknowledge that we are not responsible for the operation of or content located on or through any of these sites. Use of these sites is completely at your own risk.
+        </p>
+        <p>
+        If you access and use this website outside the United States you are responsible for complying with your local laws and regulations.
+        </p>
+        <p>
+        If you or this organization needs to connect with us, we can be reached at 602-456-1049
+        </p>
+      </div>
+      <div class="tab-pane fade" id="tac" role="tabpanel">
+        <p class="mt-3">
+        Browser Compatability: We support all modern browsers, such as Google Chrome, Safari, Mozilla Firefox, Opera, and Internet Explorer version 9 and higher. Javascript is required for this site to function properly.
+        </p>
+        <p>
+        This website may contain links to other sites on the internet that are owned and operated by third parties. You acknowledge that we are not responsible for the operation of or content located on or through any of these sites. Use of these sites is completely at your own risk.
+        </p>
+        <p>
+        If you access and use this website outside the United States you are responsible for complying with your local laws and regulations.
+        </p>
+        <p>
+        Customer Service: If you need help with your account, login issues, or general help with any of your transactions or use of this website, please contact your organization's administrative offices for assistance. SecureGive works hand in hand with your organization's personnel to help resolve any issues in a timely manner.
+        </p>
+        <p>
+        Refunds: If you made a transaction that needs to be refunded, please contact your organization's administrative offices and they can assist to get your funds returned as quickly as possible.
+        </p>
+        <p>
+        Transactions: Your account will be charged at the time your transaction is completed, and this transaction will take a few days to clear the bank and for the funds to be deducted from your account. If it has been longer than 5 business days and your funds have not been deducted from your account, please contact your organization's administrative offices for further assistance.
+        </p>
+        <p>
+        If you or this organization needs to connect with us, we can be reached at 602-456-1049
+        </p>
+      </div>
     </div>
   </div>
 </div>
