--- a/app/views/pages/psalms.html.erb
+++ b/app/views/pages/psalms.html.erb
@@ -1,26 +1,24 @@
 <% provide(:title, "Psalms") %>
 <%= render "shared/banner" %>
-<div class="container">
-  <div class="d-flex flex-nowrap">
-    <%= render "shared/side-bar" %>
-    <div class="c">
-      <h4>Psalms Project</h4>
-        <p>
-        It is extremely difficult to find any psalms from the King James Bible that have been put to music without altering the text. Those that have been put to music are usually only a few verses long, and not the entire psalm. Pastor Anderson's goal is to put all 150 psalms to music without changing a single word of the KJV text. Check back at this page for new additions to the repertoire as the project moves forward.
-        </p>
-        <h5>Sheet Music of Completed Psalms:</h5>
-        <a href="http://www.faithfulwordbaptist.org/psalm015.pdf">Psalm 15</a><br>
-        <a href="http://www.faithfulwordbaptist.org/psalm096.pdf">Psalm 96</a><br>
-        <a href="http://www.faithfulwordbaptist.org/psalm117.pdf">Psalm 117</a>
-        <h5>Sheet Music of Easier Versions:</h5>
-        <a href="http://www.faithfulwordbaptist.org/psalm015basic.pdf">Psalm 15</a>
-        <h4>Videos of Completed Psalms:</h4>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5JlTGPJ-B8" frameborder="0" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/HqSom-vCbcI" frameborder="0" allowfullscreen></iframe>
-        <blockquote class="verse">
-        <p class="mb-0">“Let the word of Christ dwell in you richly in all wisdom; teaching and admonishing one another in psalms and hymns and spiritual songs, singing with grace in your hearts to the Lord.”</p>
-        <small>Colossians 3:16 KJV</small>
-        </blockquote>
-    </div>
+<div class="d-flex flex-nowrap">
+  <%= render "shared/side-bar" %>
+  <div>
+    <h4>Psalms Project</h4>
+    <p>
+    It is extremely difficult to find any psalms from the King James Bible that have been put to music without altering the text. Those that have been put to music are usually only a few verses long, and not the entire psalm. Pastor Anderson's goal is to put all 150 psalms to music without changing a single word of the KJV text. Check back at this page for new additions to the repertoire as the project moves forward.
+    </p>
+    <h5>Sheet Music of Completed Psalms:</h5>
+    <a href="http://www.faithfulwordbaptist.org/psalm015.pdf">Psalm 15</a><br>
+    <a href="http://www.faithfulwordbaptist.org/psalm096.pdf">Psalm 96</a><br>
+    <a href="http://www.faithfulwordbaptist.org/psalm117.pdf">Psalm 117</a>
+    <h5>Sheet Music of Easier Versions:</h5>
+    <a href="http://www.faithfulwordbaptist.org/psalm015basic.pdf">Psalm 15</a>
+    <h4>Videos of Completed Psalms:</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5JlTGPJ-B8" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HqSom-vCbcI" frameborder="0" allowfullscreen></iframe>
+    <blockquote class="verse">
+    <p class="mb-0">“Let the word of Christ dwell in you richly in all wisdom; teaching and admonishing one another in psalms and hymns and spiritual songs, singing with grace in your hearts to the Lord.”</p>
+    <small>Colossians 3:16 KJV</small>
+    </blockquote>
   </div>
 </div>
