--- a/app/views/pages/radio.html.erb
+++ b/app/views/pages/radio.html.erb
@@ -1,82 +1,80 @@
 <% provide(:title, "Radio") %>
 <%= render "shared/banner" %>
-<div class="container">
-  <div class="d-flex flex-nowrap">
-    <%= render "shared/side-bar" %>
-    <div class="c">
-      <h1>Faithful Word Baptist Church Radio 24/7!</h1>
-        <script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"></script>
-        <div id="list-sw" class="container">
-        <ul class="list-group">
-          <li class="list-group-item active">
-          <strong class="display-4">Monday - Friday Schedule:</strong>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Freestyle
-          <span class="badge badge-default badge-pill">12:00AM - 7:00AM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Bible Reading (Psalms)
-          <span class="badge badge-default badge-pill">7:00AM - 8:00AM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Congregational Hymns
-          <span class="badge badge-default badge-pill">8:00AM - 9:00AM</span>
-          <li class="list-group-item justify-content-between">
-          Bible Preaching
-          <span class="badge badge-default badge-pill">9:00aM - 11:00AM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Congregational Hymns
-          <span class="badge badge-default badge-pill">11:00AM - 1:00PM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Bible Preaching
-          <span class="badge badge-default badge-pill">1:00PM - 3:00PM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Congregational Hymns
-          <span class="badge badge-default badge-pill">3:00PM - 5:00PM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Bible Preaching
-          <span class="badge badge-default badge-pill">5:00PM - 7:00PM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Congregational Hymns
-          <span class="badge badge-default badge-pill">7:00PM - 9:00PM</span>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Freestyle
-          <span class="badge badge-default badge-pill">9:00PM - 12:00AM</span>
-          </li>
-        </ul>
-        </div>
-        <div id="list-sw" class="container">
-        <ul class="list-group">
-          <li class="list-group-item active">
-          <strong class="display-4">Saturday - Sunday Schedule:</strong>
-          </li>
-          <li class="list-group-item justify-content-between">
-          Freestyle
-          <span class="badge badge-default badge-pill">12:00AM - 12:00AM</span>
-          </li>
-        </ul>
-        </div>
-        <h4>3 Other Ways to Listen:</h4>
-        <ul class="list-unstyled">
-        <li>1. Listen From Your iPhone by simply visiting this page in the browser.</li>
-        <li>2. Listen From Your Android Smart Phone by Downloading the Winamp App, clicking on Shoutcast Radio, and searching "Faithful Word Baptist Church."</li>
-        <li>3. Embed the player into your website or blog by using the following embed code:<br>
-        <code>
-          &lt;script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"&gt;&lt;/script&gt;
-        </code>
+<div class="d-flex flex-nowrap">
+  <%= render "shared/side-bar" %>
+  <div>
+    <h4>Faithful Word Baptist Church Radio 24/7!</h4>
+      <script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"></script>
+      <div id="list-sw">
+      <ul class="list-group">
+        <li class="list-group-item active">
+        <strong class="display-4">Monday - Friday Schedule:</strong>
         </li>
-        </ul>
-        <blockquote class="blockquote">
-        <p class="mb-0">“These were more noble than those in Thessalonica, in that they received the word with all readiness of mind, and searched the scriptures daily, whether those things were so.”</p>
-        <footer class="blockquote-footer">Acts 17:11 <cite title="Source Title">KJV</cite></footer>
-        </blockquote>
-    </div>
+        <li class="list-group-item justify-content-between">
+        Freestyle
+        <span class="badge badge-default badge-pill">12:00AM - 7:00AM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Bible Reading (Psalms)
+        <span class="badge badge-default badge-pill">7:00AM - 8:00AM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Congregational Hymns
+        <span class="badge badge-default badge-pill">8:00AM - 9:00AM</span>
+        <li class="list-group-item justify-content-between">
+        Bible Preaching
+        <span class="badge badge-default badge-pill">9:00aM - 11:00AM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Congregational Hymns
+        <span class="badge badge-default badge-pill">11:00AM - 1:00PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Bible Preaching
+        <span class="badge badge-default badge-pill">1:00PM - 3:00PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Congregational Hymns
+        <span class="badge badge-default badge-pill">3:00PM - 5:00PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Bible Preaching
+        <span class="badge badge-default badge-pill">5:00PM - 7:00PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Congregational Hymns
+        <span class="badge badge-default badge-pill">7:00PM - 9:00PM</span>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Freestyle
+        <span class="badge badge-default badge-pill">9:00PM - 12:00AM</span>
+        </li>
+      </ul>
+      </div>
+      <div id="list-sw">
+      <ul class="list-group">
+        <li class="list-group-item active">
+        <strong class="display-4">Saturday - Sunday Schedule:</strong>
+        </li>
+        <li class="list-group-item justify-content-between">
+        Freestyle
+        <span class="badge badge-default badge-pill">12:00AM - 12:00AM</span>
+        </li>
+      </ul>
+      </div>
+      <h4>3 Other Ways to Listen:</h4>
+      <ul class="list-unstyled">
+      <li>1. Listen From Your iPhone by simply visiting this page in the browser.</li>
+      <li>2. Listen From Your Android Smart Phone by Downloading the Winamp App, clicking on Shoutcast Radio, and searching "Faithful Word Baptist Church."</li>
+      <li>3. Embed the player into your website or blog by using the following embed code:<br>
+      <code>
+        &lt;script src="http://player.radiocdn.com/iframe.js?hash=ce6989c17a874451cbb61cb5fb1732b6e07fc458-118-41"&gt;&lt;/script&gt;
+      </code>
+      </li>
+      </ul>
+      <blockquote class="verse">
+        <p>“These were more noble than those in Thessalonica, in that they received the word with all readiness of mind, and searched the scriptures daily, whether those things were so.”</p>
+        <small>Acts 17:11 KJV</small>
+      </blockquote>
   </div>
 </div>
