--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,11 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <body>
-    <div class="bg-inverse py-1">
-      <div class="container">
-        <div class="d-flex align-items-start">
-          <span class="mr-auto text-silent">Faithful Word Baptist Church - Tempe, AZ</span>
-          <%= link_to "https://www.truebornsons.com/donate-to-fwbc/", class: "yellow-btn", target: "_blank" do %>
-            DONATE &rsaquo;
-            <% end %>
-        </div>
-      </div>
+    <%= render 'layouts/top_banner' %>
+    <div class="container">
+      <%= render 'layouts/navigation' %>
+      <%= yield %>
     </div>
-    <%= render 'shared/navigation' %>
-    <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
 </html>
