--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -221,6 +221,13 @@ a:hover {
 /* ------------------
   SIDE COLUMN
    ------------------   */
+.browse-side-image p{
+  margin: 10px 0;
+}
+
+.browse-side-image img{
+  border: 1px solid #999;
+}
 
 .browse-side-column {
   border: 1px solid #999;
