--- a/app/views/layouts/_top_banner.html.erb
+++ b/app/views/layouts/_top_banner.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-inverse py-1 mb-2">
   <div class="container">
     <div class="d-flex align-items-start">
-      <%= link_to 'Faithful Word Baptist Church - Tempe, AZ', root_path, class: "mr-auto text-silent" %>
+      <%= link_to 'Faithful Word Baptist Church | Tempe, Arizona', root_path, class: "mr-auto text-silent" %>
       <%= link_to "https://www.truebornsons.com/donate-to-fwbc/", class: "yellow-btn", target: "_blank" do %>
         DONATE &rsaquo;
       <% end %>
