--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,33 +1,7 @@
-<div class="mb-2">
-  <div id="carouselExampleIndicators" class="carousel slide mx-0" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active ">
-        <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid" %>
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid" %>
-        <div class="carousel-caption d-none d-md-block">
-        </div>
-      </div>
-      <div class="carousel-item">
-        <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid" %>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
+<%= render 'shared/carousel' %>
 <div class="d-flex flex-nowrap">
   <%= render "shared/side-bar" %>
-  <div class="c">
+  <div>
     <h3>Welcome to the website of Faithful Word Baptist Church!</h3>
     <p>Over 13 million mp3 sermons have been downloaded from this site!</p>
     <p>We are a local New Testament church reaching the Phoenix area with the Gospel of Jesus Christ. Don't expect anything contemporary or liberal. We are an
@@ -41,7 +15,9 @@
     <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
     <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into <%= link_to "over 115 languages!", foreignlanguages_path %></p>
     <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Check out Pastor Anderson's new documentary "Burn That Way After All:"</p>
-    <%= ytube_embed("fSqU7qqu6eM", 580, 322) %>
+    <div align="center">
+      <%= ytube_embed("fSqU7qqu6eM", 580, 322) %>
+    </div>
     <blockquote class="verse">
       <p class="mb-0">“Holding fast the faithful word as he hath been taught, that he may be able by sound doctrine both to exhort and to convince the gainsayers.”</p>
       <small>Titus 1:9 KJV</small>
