--- a/app/views/pages/biblememory.html.erb
+++ b/app/views/pages/biblememory.html.erb
@@ -4,7 +4,7 @@
   <div class="col">
     <h1>How to Memorize Large Sections of the Bible with Ease
       <br>
-      <small class="text-muted">by Pastor Steven L. Anderson</small>
+      <p class="text-muted">by Pastor Steven L. Anderson</p>
     </h1>
     <h5>There are 3 primary methods that will revolutionize the way you memorize the Bible:</h5>
     <p>
@@ -47,15 +47,15 @@
     <h5>Here are a few of God's promises associated with memorization/meditation:</h5>
     <blockquote class="verse">
       <p class="mb-0">“This book of the law shall not depart out of thy mouth; but thou shalt meditate therein day and night, that thou mayest observe to do according to all that is written therein: for then thou shalt make thy way prosperous, and then thou shalt have good success.”</p>
-      <small>Joshua 1:8 KJV</small>
+      <p>Joshua 1:8</p>
     </blockquote>
     <blockquote class="verse">
       <p class="mb-0">“But his delight is in the law of the LORD; and in his law doth he meditate day and night. And he shall be like a tree planted by the rivers of water, that bringeth forth his fruit in his season; his leaf also shall not wither; and whatsoever he doeth shall prosper.”</p>
-      <small>Psalm 1:2-3 KJV</small>
+      <p>Psalm 1:2-3</p>
     </blockquote>
     <blockquote class="verse">
       <p class="mb-0">“If ye abide in me, and my words abide in you, ye shall ask what ye will, and it shall be done unto you.”</p>
-      <small>John 15:7 KJV</small>
+      <p>John 15:7</p>
     </blockquote>
     <p>
       From 4/15/05 to 9/15/05 I memorized 70 chapters in the New Testament and retained them all. My goal is to memorize the entire New Testament within the next two years (260 chapters).
