--- a/app/views/pages/churchdirectory.html.erb
+++ b/app/views/pages/churchdirectory.html.erb
@@ -115,7 +115,7 @@
     
     <blockquote class="verse">
       <p class="mb-0">“But if I tarry long, that thou mayest know how thou oughtest to behave thyself in the house of God, which is the church of the living God, the pillar and ground of the truth.”</p>
-      <small>1 Timothy 3:15 KJV</small>
+      <p>1 Timothy 3:15</p>
     </blockquote>
   </div>
 </div>
