--- a/app/views/pages/malawi.html.erb
+++ b/app/views/pages/malawi.html.erb
@@ -69,8 +69,8 @@
       <p>Check out Bro. Garrett Kirchway's YouTube Channel: <a href="https://www.youtube.com/channel/UCFbRPOX35YlKvISNq9mAwfw">FWBC Missions</a></p>
 
       <blockquote class="verse">
-      <p class="mb-0">“But ye shall receive power, after that the Holy Ghost is come upon you: and ye shall be witnesses unto me both in Jerusalem, and in all Judaea, and in Samaria, and unto the uttermost part of the earth.”</p>
-      <small>Acts 1:8 KJV</small>
+        <p>“But ye shall receive power, after that the Holy Ghost is come upon you: and ye shall be witnesses unto me both in Jerusalem, and in all Judaea, and in Samaria, and unto the uttermost part of the earth.”</p>
+        <p>Acts 1:8</p>
       </blockquote>
   </div>
 </div>
