--- a/app/views/pages/ourpastor.html.erb
+++ b/app/views/pages/ourpastor.html.erb
@@ -54,5 +54,5 @@
 </div>
 <blockquote class="verse">
   <p class="mb-0">“And he gave some, apostles; and some, prophets; and some, evangelists; and some, pastors and teachers; For the perfecting of the saints, for the work of the ministry, for the edifying of the body of Christ:”</p>
-  <small>Ephesians 4:11-12 KJV</small>
+  <p>Ephesians 4:11-12</p>
 </blockquote>
