--- a/app/views/pages/psalms.html.erb
+++ b/app/views/pages/psalms.html.erb
@@ -18,7 +18,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/HqSom-vCbcI" frameborder="0" allowfullscreen></iframe>
     <blockquote class="verse">
     <p class="mb-0">“Let the word of Christ dwell in you richly in all wisdom; teaching and admonishing one another in psalms and hymns and spiritual songs, singing with grace in your hearts to the Lord.”</p>
-    <small>Colossians 3:16 KJV</small>
+    <p>Colossians 3:16</p>
     </blockquote>
   </div>
 </div>
