--- a/app/views/pages/radio.html.erb
+++ b/app/views/pages/radio.html.erb
@@ -74,7 +74,7 @@
       </ul>
       <blockquote class="verse">
         <p>“These were more noble than those in Thessalonica, in that they received the word with all readiness of mind, and searched the scriptures daily, whether those things were so.”</p>
-        <small>Acts 17:11 KJV</small>
+        <p>Acts 17:11</p>
       </blockquote>
   </div>
 </div>
