--- a/app/views/pages/soulwinning.html.erb
+++ b/app/views/pages/soulwinning.html.erb
@@ -4,7 +4,7 @@
 
 <blockquote class="verse">
   <p class="mb-0">“The fruit of the righteous is a tree of life; and he that winneth souls is wise.”</p>
-  <small>Proverbs 11:30 KJV</small>
+  <p>Proverbs 11:30</p>
 </blockquote>
 
 <div class="row">
@@ -76,13 +76,13 @@
 
 <blockquote class="verse">
   <p class="mb-0">“And he said unto them, Let us go into the next towns, that I may preach there also: for therefore came I forth.”</p>
-  <small>Mark 1:38 KJV</small>
+  <p>Mark 1:38</p>
 </blockquote>
 <blockquote class="verse">
   <p class="mb-0">“And daily in the temple, and in every house, they ceased not to teach and preach Jesus Christ.”</p>
-  <small>Acts 5:42 KJV</small>
+  <p>Acts 5:42</p>
 </blockquote>
 <blockquote class="verse">
   <p class="mb-0">“And he said unto them, Go ye into all the world, and preach the gospel to every creature.”</p>
-  <small>Mark 16:15 KJV</small>
+  <p>Mark 16:15</p>
 </blockquote>
