--- a/app/views/preaching/index.html.erb
+++ b/app/views/preaching/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'form' %>
+<%= render 'new_form' %>
 <% provide(:title, "Preaching") %>
 <%= render "shared/banner" %>
 <h4>Sermons from Faithful Word Baptist Church</h4>
