--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
     </div>
     <blockquote class="verse">
       <p class="mb-0">“Holding fast the faithful word as he hath been taught, that he may be able by sound doctrine both to exhort and to convince the gainsayers.”</p>
-      <small>Titus 1:9 KJV</small>
+      <p>Titus 1:9</p>
     </blockquote>
   </div>
 </div>
