--- a/app/views/pages/audiobible.html.erb
+++ b/app/views/pages/audiobible.html.erb
@@ -339,9 +339,9 @@
       </div>
       </div>
 
-      <blockquote class="blockquote">
-      <p class="mb-0">“For the word of God is quick, and powerful, and sharper than any twoedged sword, piercing even to the dividing asunder of soul and spirit, and of the joints and marrow, and is a discerner of the thoughts and intents of the heart.”</p>
-      <footer class="blockquote-footer">Hebrews 4:12 <cite title="Source Title">KJV</cite></footer>
+      <blockquote class="verse">
+        <p>“For the word of God is quick, and powerful, and sharper than any twoedged sword, piercing even to the dividing asunder of soul and spirit, and of the joints and marrow, and is a discerner of the thoughts and intents of the heart.”</p>
+        <p>Hebrews 4:12</p>
       </blockquote>
   </div>
 </div>
