--- a/app/views/preaching/_new_form.html.erb
+++ b/app/views/preaching/_new_form.html.erb
@@ -8,15 +8,15 @@
             <div class="col-6">
               <div class="form-group">
                 <%= f.label :datetime %>
-                <%= f.date_field :datetime, class: "form-control event-date", type: "date" %>
+                <%= f.datetime_local_field :datetime, class: "form-control" %>
               </div>
               <div class="form-group">
                 <%= f.label :title %>
-                <%= f.text_field :title, class: "form-control event-title", type: "text", placeholder: "Title of Sermon", autofocus: true %>
+                <%= f.text_field :title, class: "form-control", type: "text", placeholder: "Title of Sermon", autofocus: true %>
               </div>
               <div class="form-group">
                 <%= f.label :preacher %>
-                <%= f.text_field :preacher, class: "form-control event-location", type: "text", placeholder: "Preacher" %>
+                <%= f.text_field :preacher, class: "form-control", type: "text", placeholder: "Preacher" %>
               </div>
               <div class="form-group">
                 <%= f.label :mp3 %>
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <%= f.label :location %>
-                <%= f.text_field :location, class: "form-control event-location", type: "text", placeholder: "Location" %>
+                <%= f.text_field :location, class: "form-control", type: "text", placeholder: "Location" %>
               </div>
               <div class="form-group">
                 <%= f.label :format %>
